// Copyright (c) 2015-present Mattermost, Inc. All Rights Reserved.
// See LICENSE.txt for license information.

import React from 'react';

import {Provider} from 'react-redux';

import Textbox from 'components/textbox/textbox';
import {renderWithIntl} from 'tests/react_testing_utils';
import store from 'stores/redux_store';

describe('components/TextBox', () => {
    const baseProps = {
        channelId: 'channelId',
        rootId: 'rootId',
        currentUserId: 'currentUserId',
        currentTeamId: 'currentTeamId',
        profilesInChannel: [
            {id: 'id1'},
            {id: 'id2'},
        ],
        autocompleteGroups: [
            {id: 'gid1'},
            {id: 'gid2'},
        ],
        actions: {
            autocompleteUsersInChannel: jest.fn(),
            autocompleteChannels: jest.fn(),
            searchAssociatedGroupsForReference: jest.fn(),
        },
        useChannelMentions: true,
        tabIndex: 0,
    };

    test('should match snapshot with required props', () => {
        function emptyFunction() {} //eslint-disable-line no-empty-function

        const {container} = renderWithIntl(
            <Provider store={store}>

                <Textbox
                    id='someid'
                    value='some test text'
                    onChange={emptyFunction}
                    onKeyPress={emptyFunction}
                    characterLimit={4000}
                    createMessage='placeholder text'
                    supportsCommands={false}
                    {...baseProps}
                />
            </Provider>,

        );
        expect(container).toMatchSnapshot();
    });

    test('should match snapshot with additional, optional props', () => {
        function emptyFunction() {} //eslint-disable-line no-empty-function

        const {container} = renderWithIntl(
            <Provider store={store}>

                <Textbox
                    id='someid'
                    value='some test text'
                    onChange={emptyFunction}
                    onKeyPress={emptyFunction}
                    characterLimit={4000}
                    createMessage='placeholder text'
                    supportsCommands={false}
                    {...baseProps}
                    rootId='root_id'
                    onComposition={() => {}}
                    onHeightChange={() => {}}
                    onKeyDown={() => {}}
                    onSelect={() => {}}
                    onMouseUp={() => {}}
                    onKeyUp={() => {}}
                    onBlur={() => {}}
                    handlePostError={() => {}}
                    suggestionListPosition='top'
                    emojiEnabled={true}
                    isRHS={true}
                    disabled={true}
                    badConnection={true}
                    listenForMentionKeyClick={true}
                    preview={true}
                    openWhenEmpty={true}
                />
            </Provider>,

        );
        expect(container).toMatchSnapshot();
    });

    test('should throw error when value is too long', () => {
        function emptyFunction() {} //eslint-disable-line no-empty-function

        // this mock function should be called when the textbox value is too long
        let gotError = false;
        function handlePostError(msg: React.ReactNode) {
            gotError = msg !== null;
        }

        const {container} = renderWithIntl(
            <Provider store={store}>
                <Textbox
                    id='someid'
                    value='some test text that exceeds char limit'
                    onChange={emptyFunction}
                    onKeyPress={emptyFunction}
                    characterLimit={14}
                    createMessage='placeholder text'
                    supportsCommands={false}
                    handlePostError={handlePostError}
                    {...baseProps}
                />
            </Provider>,
        );

        expect(gotError).toEqual(true);
        expect(container).toMatchSnapshot();
    });

    test('should throw error when new property is too long', () => {
        function emptyFunction() {} //eslint-disable-line no-empty-function

        // this mock function should be called when the textbox value is too long
        let gotError = false;
        function handlePostError(msg: React.ReactNode) {
            gotError = msg !== null;
        }

        const {container} = renderWithIntl(
            <Provider store={store}>

                <Textbox
                    id='someid'
                    value='some test text that exceeds char limit'
                    onChange={emptyFunction}
                    onKeyPress={emptyFunction}
                    characterLimit={14}
                    createMessage='placeholder text'
                    supportsCommands={false}
                    handlePostError={handlePostError}
                    {...baseProps}
                />
            </Provider>,

        );
        expect(gotError).toEqual(true);

        expect(container).toMatchSnapshot();
    });
});
