// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TextBox should match snapshot with additional, optional props 1`] = `
<div>
  <div
    class="textarea-wrapper textarea-wrapper--preview"
  >
    <div
      class=""
    >
      <div
        aria-live="polite"
        class="sr-only"
        role="alert"
      />
      <div>
        <div>
          <textarea
            aria-label="placeholder text"
            autocomplete="off"
            class="form-control custom-textarea custom-textarea--emoji-picker bad-connection custom-textarea--preview"
            data-testid="someid"
            dir="auto"
            disabled=""
            height="0"
            id="someid"
            role="textbox"
            rows="1"
            spellcheck="true"
            style="visibility: hidden;"
          >
            some test text
          </textarea>
          <div
            style="height: 0px; overflow: hidden;"
          >
            <textarea
              aria-hidden="true"
              autocomplete="off"
              class="form-control custom-textarea custom-textarea--emoji-picker bad-connection custom-textarea--preview"
              dir="auto"
              disabled=""
              id="someid-reference"
              rows="1"
              spellcheck="true"
              style="visibility: hidden;"
            >
              some test text
            </textarea>
            <div
              id="someid-measuring"
              style="width: auto; display: inline-block;"
            >
              some test text
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-control custom-textarea textbox-preview-area"
      tabindex="0"
    >
      <p>
        some test text
      </p>
    </div>
  </div>
  ,
</div>
`;

exports[`components/TextBox should match snapshot with required props 1`] = `
<div>
  <div
    class="textarea-wrapper"
  >
    <div
      class=""
    >
      <div
        aria-live="polite"
        class="sr-only"
        role="alert"
      />
      <div>
        <div>
          <textarea
            aria-label="placeholder text"
            autocomplete="off"
            class="form-control custom-textarea"
            data-testid="someid"
            dir="auto"
            height="0"
            id="someid"
            role="textbox"
            rows="1"
            spellcheck="true"
            style="visibility: visible;"
          >
            some test text
          </textarea>
          <div
            style="height: 0px; overflow: hidden;"
          >
            <textarea
              aria-hidden="true"
              autocomplete="off"
              class="form-control custom-textarea"
              dir="auto"
              disabled=""
              id="someid-reference"
              rows="1"
              spellcheck="true"
              style="visibility: visible;"
            >
              some test text
            </textarea>
            <div
              id="someid-measuring"
              style="width: auto; display: inline-block;"
            >
              some test text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</div>
`;

exports[`components/TextBox should throw error when new property is too long 1`] = `
<div>
  <div
    class="textarea-wrapper"
  >
    <div
      class=""
    >
      <div
        aria-live="polite"
        class="sr-only"
        role="alert"
      />
      <div>
        <div>
          <textarea
            aria-label="placeholder text"
            autocomplete="off"
            class="form-control custom-textarea"
            data-testid="someid"
            dir="auto"
            height="0"
            id="someid"
            role="textbox"
            rows="1"
            spellcheck="true"
            style="visibility: visible;"
          >
            some test text that exceeds char limit
          </textarea>
          <div
            style="height: 0px; overflow: hidden;"
          >
            <textarea
              aria-hidden="true"
              autocomplete="off"
              class="form-control custom-textarea"
              dir="auto"
              disabled=""
              id="someid-reference"
              rows="1"
              spellcheck="true"
              style="visibility: visible;"
            >
              some test text that exceeds char limit
            </textarea>
            <div
              id="someid-measuring"
              style="width: auto; display: inline-block;"
            >
              some test text that exceeds char limit
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</div>
`;

exports[`components/TextBox should throw error when value is too long 1`] = `
<div>
  <div
    class="textarea-wrapper"
  >
    <div
      class=""
    >
      <div
        aria-live="polite"
        class="sr-only"
        role="alert"
      />
      <div>
        <div>
          <textarea
            aria-label="placeholder text"
            autocomplete="off"
            class="form-control custom-textarea"
            data-testid="someid"
            dir="auto"
            height="0"
            id="someid"
            role="textbox"
            rows="1"
            spellcheck="true"
            style="visibility: visible;"
          >
            some test text that exceeds char limit
          </textarea>
          <div
            style="height: 0px; overflow: hidden;"
          >
            <textarea
              aria-hidden="true"
              autocomplete="off"
              class="form-control custom-textarea"
              dir="auto"
              disabled=""
              id="someid-reference"
              rows="1"
              spellcheck="true"
              style="visibility: visible;"
            >
              some test text that exceeds char limit
            </textarea>
            <div
              id="someid-measuring"
              style="width: auto; display: inline-block;"
            >
              some test text that exceeds char limit
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  ,
</div>
`;
